# latent-weight-lab

./: .gitignore  .ignore  AGENTS.md  README.md  pyproject.toml
benchmarks/: bench_block_fht.py  bench_fused_linear_stack.py
csrc/: block_fht_ext.cpp  block_fht_ext_cuda.cu
docs/: block_fht_notes.md  scaled_gpt_blockfht_research_plan.md
examples/: __init__.py
examples/nanogpt/: README.md  __init__.py  analyze_cproj_manifold.py  analyze_mlp_trajectory.py  analyze_residual_compatibility.py  archive_exact_checkpoint_snapshots.py  archive_remote_directory.py  archive_remote_selection.py  backfill_y400_provenance.py  benchmark_pro6_350m.py  bootstrap_finewebedu_venv.sh  collect_loss_curves.py  dense_scaling_fit.py  eval_attn_weight_geometry.py  eval_ffn_activation_stats.py  eval_proxy.py  eval_spectral.py  eval_weight_spectrum.py  hpo_full_report.py  hpo_report.py  launch_block_fht_2b_remote.sh  launch_y400_ladder_detached.sh  mai_selection_artifacts.py  make_pro6_mai_v3_dense_configs.py  make_y400_cproj_fhtlora_1b_configs.py  make_y400_cproj_lora_1b_configs.py  make_y400_cproj_lora_low_1b_configs.py  make_y400_cproj_lrbracket_100m_configs.py  make_y400_cproj_structural_1b_configs.py  make_y400_fullattn_muon_4b_configs.py  make_y400_fullattn_muon_4b_lr20_configs.py  (+65 more)
latent_weight_lab/: __init__.py  block_fht.py
scripts/: profile_fused_once.py  ptxas_report.py
tests/: test_archive_exact_checkpoint_snapshots.py  test_block_fht.py  test_block_fht_cuda.py  test_ffn_spectral_plumbing.py  test_mlp_trajectory.py  test_nanogpt_optimizer.py  test_residual_compatibility.py
(+618 files in other folders)
