[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latent-weight-lab"
version = "0.0.1"
description = "Latent-generated weight experiments"
requires-python = ">=3.10"
dependencies = ["torch"]

[tool.setuptools.packages.find]
include = ["latent_weight_lab*"]
